--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 		<title>Title</title>
 	</head>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-
 	<body>
 		<header>
 			<nav class="navbar navbar-expand-lg container">
@@ -46,7 +45,7 @@
 				<div class="body-header1">
 					Один из главных производителей <span class="accent-text">полимерных</span> материалов
 				</div>
- 				<div class="body-subheader-small" style="width: 80%; margin-left: 10%; margin-top: 10px; margin-bottom: 100px;">
+ 				<div class="body-subheader-small" style="width: 80%; margin-left: 10%; margin-top: 10px; margin-bottom: 80px;">
 					инновационно-промышленный комплекс, нацеленный на разработку и освоение промышленных технологий
 				</div>
 
@@ -54,23 +53,55 @@
 			</div>
 
 			<div>
-				<div class="body-header1">
-					Что мы предлагаем
+				<div class="body-header1" style="margin-bottom: 80px;">
+					Узнайте подробнее
 				</div>
 
 				<div class="row">
-					<div class="col-sm">
-						1
-					</div>
-					<div class="col-sm">
-						1
-					</div>
-					<div class="col-sm">
-						1
-					</div>
-					<div class="col-sm">
-						1
-					</div>
+					<a href="#" class="col-sm showcase-item">
+						<div class="showcase-item-circle">
+							<img class="showcase-item-icon" src="img/service.png"/>
+						</div>
+						<div class="showcase-item-header">
+							Услуги
+						</div>
+						<div class="showcase-item-text">
+							Полный комплекс научно-исследовательских и опытно-конструкторских работ.
+						</div>
+					</a>
+					<a href="#" class="col-sm showcase-item">
+						<div class="showcase-item-circle">
+							<img class="showcase-item-icon" src="img/test-tube.png"/>
+						</div>
+						<div class="showcase-item-header">
+							Испытания
+						</div>
+						<div class="showcase-item-text">
+							Комплекс исследований и испытаний по технологическим и эксплуатационным характеристикам полимеров и другой химической продукции, в том числе с целью сертификации.
+						</div>
+					</a>
+					<a href="#" class="col-sm showcase-item">
+						<div class="showcase-item-circle">
+							<img class="showcase-item-icon" src="img/product.png"/>							
+						</div>
+						<div class="showcase-item-header">
+							Продукция
+						</div>
+						<div class="showcase-item-text">
+							Разработка и производство современных наукоемких полимерных материалов и конструкционных полимеров.
+						</div>
+					</a>
+					<a href="#" class="col-sm showcase-item">
+						<div class="showcase-item-circle">
+							<img class="showcase-item-icon" src="img/handshake.png"/>
+						</div>
+						<div class="showcase-item-header">
+							Сотрудничество
+						</div>
+						<div class="showcase-item-text">
+							Наши уникальные предложения - потенциал для долгосрочного сотрудничества.
+						</div>
+					</a>
 				</div>
 			</div>
 		</main>
