--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 	<body>
 		<header>
-			<nav class="navbar navbar-expand-lg container">
+			<nav class="navbar navbar-expand-lg navbar-light container">
 				<a class="navbar-brand" href="#">
 					<img class="logo" src="img/LogoWithTitle.svg">
 				</a>
-				<div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-				  <div class="navbar-nav">
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+				  <ul class="navbar-nav navbar-center">
 					<li class="nav-item">
 						<a href="#">продукты</a>
 					</li>
@@ -35,7 +38,7 @@
 					<li class="nav-item">
 						<a href="#">контакты</a>
 					</li>
-				  </div>
+					</ul>
 				</div>
 			  </nav>
 		</header>
