Add other pages

--- a/contact.html
+++ b/contact.html
@@ -9,13 +9,13 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/style.css">
 
-		<title>Институс пластмасс - Главная</title>
+		<title>Институт пластмасс - Контакты</title>
 	</head>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 	<body>
 		<header>
 			<nav class="navbar navbar-expand-lg navbar-light container">
-				<a class="navbar-brand" href="#">
+				<a class="navbar-brand" href="index.html">
 					<img class="logo" src="img/LogoWithTitle.svg">
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,76 +36,39 @@
 						<a href="cooperation.html">сотрудничество</a>
 					</li>
 					<li class="nav-item">
-						<a href="contact.html">контакты</a>
+						<a href="#">контакты</a>
 					</li>
 					</ul>
 				</div>
 			  </nav>
 		</header>
 
-		<main role="main" class="container">
-			<div style="width: 50%; margin-bottom: 300px; margin-top: 150px; margin-left: auto; margin-right: auto;">
-				<div class="body-header1">
-					Один из главных производителей <span class="accent-text">полимерных</span> материалов
-				</div>
- 				<div class="body-subheader-small" style="width: 80%; margin-left: 10%; margin-top: 10px; margin-bottom: 80px;">
-					инновационно-промышленный комплекс, нацеленный на разработку и освоение промышленных технологий
-				</div>
-
-				<img src="img/PolymerWithCircle.svg" style="margin-left: auto; margin-right: auto; display: block;">
+		<main role="main" class="container" style="width: 50%;">
+			<div class="body-header1">
+				Контакты
 			</div>
-
-			<div>
-				<div class="body-header1" style="margin-bottom: 80px;">
-					Узнайте подробнее
-				</div>
-
-				<div class="row">
-					<a href="services.html" class="col-sm showcase-item">
-						<div class="showcase-item-circle">
-							<img class="showcase-item-icon" src="img/service.png"/>
-						</div>
-						<div class="showcase-item-header">
-							Услуги
-						</div>
-						<div class="showcase-item-text">
-							Полный комплекс научно-исследовательских и опытно-конструкторских работ.
-						</div>
-					</a>
-					<a href="tests.html" class="col-sm showcase-item">
-						<div class="showcase-item-circle">
-							<img class="showcase-item-icon" src="img/test-tube.png"/>
-						</div>
-						<div class="showcase-item-header">
-							Испытания
-						</div>
-						<div class="showcase-item-text">
-							Комплекс исследований и испытаний по технологическим и эксплуатационным характеристикам полимеров и другой химической продукции, в том числе с целью сертификации.
-						</div>
-					</a>
-					<a href="products.html" class="col-sm showcase-item">
-						<div class="showcase-item-circle">
-							<img class="showcase-item-icon" src="img/product.png"/>							
-						</div>
-						<div class="showcase-item-header">
-							Продукция
-						</div>
-						<div class="showcase-item-text">
-							Разработка и производство современных наукоемких полимерных материалов и конструкционных полимеров.
-						</div>
-					</a>
-					<a href="cooperation.html" class="col-sm showcase-item">
-						<div class="showcase-item-circle">
-							<img class="showcase-item-icon" src="img/handshake.png"/>
-						</div>
-						<div class="showcase-item-header">
-							Сотрудничество
-						</div>
-						<div class="showcase-item-text">
-							Наши уникальные предложения - потенциал для долгосрочного сотрудничества.
-						</div>
-					</a>
-				</div>
+			<div class="body-text">
+				<p>Акционерное общество &laquo;Институт пластмасс имени Г.С.Петрова&raquo;</p>
+				<p>Адрес почтовый: 111024, Москва, Перовский проезд, д.35</p>
+				<p>Общая почта: <a href="mailto:info@instplast.ru">dir@instplast.ru</a>&nbsp;&nbsp;</p>
+				<p>Номера телефонов, телефаксов:</p>
+				<p>+7 (495) 600-06-00, факс: +7(495)&nbsp;600-07-67&nbsp;</p>
+				<p>&nbsp;</p>
+				<p><em>По вопросам заказа и приобретения продуктов</em></p>
+				<p>+7 (495) 600-06-00 (доб.153 и 154)</p>
+				<p><em>По вопросам проведения лабораторных исследований</em></p>
+				<p>+7 (495) 600-06-00 (доб.112 и 183)</p>
+				<p><em>По вопросам сдачи материалов для проведения лабораторных исследований и испытаний</em></p>
+				<p>&nbsp;+7 (495) 600-06-00</p>
+				<p><em>По вопросам получения результатов проведеных лабораторных исследований и испытаний</em></p>
+				<p>+7 (495) 600-06-00 (доб.127)&nbsp;Евдокимова Елена Михайловна. Сдача материалов для проведения исследований с 10.00-16.00<u></u><u></u></p>
+				<p><em>По вопросам ГОСТ, ТУ&nbsp;</em></p>
+				<p>+7 (495) 600-06-00 (доб. 116 и 149)</p>
+				<p>&nbsp;</p>
+				<p>Приемная генерального директора: <a href="mailto:dir@instplast.ru">dir@instplast.ru</a>&nbsp;</p>
+				<p>&nbsp;</p>
+				<p>Схема проезда:</p>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2245.8547892763563!2d37.70778031590052!3d55.743651980550936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54ab3c5d11361%3A0x3a5156c4d97fb0f7!2z0J_QtdGA0L7QstGB0LrQuNC5INC_0YAt0LQsIDM1LCDQnNC-0YHQutCy0LAsIDExMTAyNA!5e0!3m2!1sru!2sru!4v1617616315311!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 			</div>
 		</main>
 
