--- a/products.html
+++ b/products.html
@@ -9,13 +9,13 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/style.css">
 
-		<title>Институс пластмасс - Главная</title>
+		<title>Институт пластмасс - Продукты</title>
 	</head>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 	<body>
 		<header>
 			<nav class="navbar navbar-expand-lg navbar-light container">
-				<a class="navbar-brand" href="#">
+				<a class="navbar-brand" href="index.html">
 					<img class="logo" src="img/LogoWithTitle.svg">
 				</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +24,7 @@
 				<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 				  <ul class="navbar-nav navbar-center">
 					<li class="nav-item">
-						<a href="products.html">продукты</a>
+						<a href="#">продукты</a>
 					</li>
 					<li class="nav-item">
 						<a href="tests.html">испытания</a>
@@ -43,69 +43,23 @@
 			  </nav>
 		</header>
 
-		<main role="main" class="container">
-			<div style="width: 50%; margin-bottom: 300px; margin-top: 150px; margin-left: auto; margin-right: auto;">
-				<div class="body-header1">
-					Один из главных производителей <span class="accent-text">полимерных</span> материалов
-				</div>
- 				<div class="body-subheader-small" style="width: 80%; margin-left: 10%; margin-top: 10px; margin-bottom: 80px;">
-					инновационно-промышленный комплекс, нацеленный на разработку и освоение промышленных технологий
-				</div>
-
-				<img src="img/PolymerWithCircle.svg" style="margin-left: auto; margin-right: auto; display: block;">
+		<main role="main" class="container" style="width: 50%;">
+			<div class="body-header1" style="margin-bottom: 50px; margin-top: 100px; ">
+				Продукция
 			</div>
-
-			<div>
-				<div class="body-header1" style="margin-bottom: 80px;">
-					Узнайте подробнее
-				</div>
-
-				<div class="row">
-					<a href="services.html" class="col-sm showcase-item">
-						<div class="showcase-item-circle">
-							<img class="showcase-item-icon" src="img/service.png"/>
-						</div>
-						<div class="showcase-item-header">
-							Услуги
-						</div>
-						<div class="showcase-item-text">
-							Полный комплекс научно-исследовательских и опытно-конструкторских работ.
-						</div>
-					</a>
-					<a href="tests.html" class="col-sm showcase-item">
-						<div class="showcase-item-circle">
-							<img class="showcase-item-icon" src="img/test-tube.png"/>
-						</div>
-						<div class="showcase-item-header">
-							Испытания
-						</div>
-						<div class="showcase-item-text">
-							Комплекс исследований и испытаний по технологическим и эксплуатационным характеристикам полимеров и другой химической продукции, в том числе с целью сертификации.
-						</div>
-					</a>
-					<a href="products.html" class="col-sm showcase-item">
-						<div class="showcase-item-circle">
-							<img class="showcase-item-icon" src="img/product.png"/>							
-						</div>
-						<div class="showcase-item-header">
-							Продукция
-						</div>
-						<div class="showcase-item-text">
-							Разработка и производство современных наукоемких полимерных материалов и конструкционных полимеров.
-						</div>
-					</a>
-					<a href="cooperation.html" class="col-sm showcase-item">
-						<div class="showcase-item-circle">
-							<img class="showcase-item-icon" src="img/handshake.png"/>
-						</div>
-						<div class="showcase-item-header">
-							Сотрудничество
-						</div>
-						<div class="showcase-item-text">
-							Наши уникальные предложения - потенциал для долгосрочного сотрудничества.
-						</div>
-					</a>
-				</div>
+			<div class="body-text">
+				<ul>
+					<li>Полиимидные материалы</li>
+					<li>Полисульфоны</li>
+					<li>Полиэфирэфиркетон</li>
+					<li>Эпоксидные материалы</li>
+					<li>Поликарбонаты</li>
+					<li>Полиамиды</li>
+					<li>Фенольные смолы и лаки</li>
+					<li>Клей метилолполиамидный ПФЭ-2/10-П</li>
+					<li>Светотехнические изделия</li>
+					<li>Полуфабрикаты стержневые из термопластов и композиционных материалов</li>
+				</ul>
 			</div>
 		</main>
 
